# varing

./: .codecov.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzzy.yml  loc.yml
benches/: varint.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arbitrary_int.rs  arbitrary_int_1.rs  arbitrary_int_2.rs  bnum.rs  chrono.rs  chrono_tz.rs  ethereum_types.rs  ethereum_types_0_15.rs  ethereum_types_0_16.rs  non_zero_varint.rs  num_complex.rs  num_rational.rs  primitive_types.rs  primitive_types_0_13.rs  primitive_types_0_14.rs  ruint.rs  time.rs  varint.rs
src/: arbitrary_int.rs  bnum.rs  char.rs  chrono.rs  chrono_tz.rs  duration.rs  error.rs  ethereum_types.rs  fuzz.rs  lib.rs  non_zero.rs  num_complex.rs  num_rational.rs  packable.rs  primitive_types.rs  primitives.rs  ruint_impl.rs  tests.rs  time.rs  time_utils.rs  utils.rs
src/arbitrary_int/: v1.rs  v2.rs
src/arbitrary_int/v2/: min_encoded_len_tests.rs
src/bnum/: v013.rs
src/bnum/v013/: tests.rs
src/char/: tests.rs
src/chrono/: v04.rs
src/chrono/v04/: tests.rs
src/chrono_tz/: v010.rs
src/chrono_tz/v010/: tests.rs
src/duration/: tests.rs
src/ethereum_types/: v0_15.rs  v0_16.rs
src/ethereum_types/v0_16/: t.rs  tests.rs
src/non_zero/: tests.rs
src/num_complex/: v04.rs
src/num_complex/v04/: bnum_0_13.rs  ruint_1.rs  tests.rs
src/num_complex/v04/tests/: bnum_0_13.rs  ruint_1.rs
src/num_rational/: v04.rs
src/num_rational/v04/: bnum_0_13.rs  ruint_1.rs  tests.rs
src/num_rational/v04/tests/: bnum_0_13.rs  ruint_1.rs
src/packable/: arbitrary_int.rs  bnum.rs  builtin.rs
src/packable/arbitrary_int/: v1.rs
src/packable/bnum/: v013.rs
src/packable/ruint/: v1.rs
src/packable/ruint/v1/: tests.rs
src/primitive_types/: v0_13.rs  v0_14.rs
src/primitive_types/v0_14/: tests.rs
src/primitives/: float8.rs  half.rs
src/primitives/float8/: v0_4.rs
src/primitives/float8/v0_4/: tests.rs
src/primitives/half/: v2.rs
src/primitives/half/v2/: tests.rs
src/ruint_impl/: v1.rs
src/ruint_impl/v1/: tests_ruint_1.rs
src/time/: v03.rs
src/time/v03/: tests.rs
