[package]
name = "const-varint"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/al8n/const-varint"
homepage = "https://github.com/al8n/const-varint"
documentation = "https://docs.rs/const-varint"
description = "Protobuf's varint encoding/decoding with full const context operations supports."
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
keywords = ["leb128", "varint", "protobuf"]
categories = ["no-std", "data-structures", "network-programming"]

[features]
default = ["std"]
std = ["thiserror/default"]

[dependencies]
thiserror = { version = "2", default-features = false }
paste = "1"

ruint_1 = { package = "ruint", version = "1", default-features = false, optional = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
ruint_1 = { package = "ruint", version = "1", features = ["arbitrary", "quickcheck"] }

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
