[package]
name = "varing"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/al8n/varing"
homepage = "https://github.com/al8n/varing"
documentation = "https://docs.rs/varing"
description = "Protobuf's varint encoding/decoding with full const context operations supports."
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"
keywords = ["leb128", "varint", "protobuf"]
categories = ["no-std", "data-structures", "network-programming"]

[workspace]
members = [".", "fuzz"]

[features]
default = ["std"]
std = ["thiserror/default"]

ruint_1 = ["dep:ruint_1"]
ruint = ["ruint_1"]

arbitrary-int_1 = ["dep:arbitrary-int_1"]
arbitrary-int = ["arbitrary-int_1"]

num-rational_0_4 = ["dep:num-rational_0_4"]
num-rational = ["num-rational_0_4"]

num-complex_0_4 = ["dep:num-complex_0_4"]
num-complex = ["num-complex_0_4"]

num-traits = ["ruint_1?/num-traits"]

primitive-types_0_13 = ["dep:primitive-types_0_13", "ruint"]
primitive-types = ["primitive-types_0_13"]

ethereum-types_0_15 = ["dep:ethereum-types_0_15", "ruint"]
ethereum-types = ["ethereum-types_0_15"]

chrono_0_4 = ["dep:chrono_0_4"]
chrono = ["chrono_0_4"]

time_0_3 = ["dep:time_0_3"]
time = ["time_0_3"]

[dependencies]
thiserror = { version = "2", default-features = false }
paste = "1"
seq-macro = "0.3"

chrono_0_4 = { package = "chrono", version = "0.4", default-features = false, optional = true }
ruint_1 = { package = "ruint", version = "1", default-features = false, optional = true }
time_0_3 = { package = "time", version = "0.3", default-features = false, optional = true }
arbitrary-int_1 = { package = "arbitrary-int", version = "1", default-features = false, optional = true }
primitive-types_0_13 = { package = "primitive-types", version = "0.13", default-features = false, optional = true }
ethereum-types_0_15 = { package = "ethereum-types", version = "0.15", default-features = false, optional = true }
num-rational_0_4 = { package = "num-rational", version = "0.4", default-features = false, optional = true }
num-complex_0_4 = { package = "num-complex", version = "0.4", default-features = false, optional = true }


[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
ruint_1 = { package = "ruint", version = "1", features = ["arbitrary", "quickcheck"] }
primitive-types_0_13 = { package = "primitive-types", version = "0.13", features = ["arbitrary"] }
ethereum-types_0_15 = { package = "ethereum-types", version = "0.15", features = ["arbitrary"] }
time_0_3 = { package = "time", version = "0.3", features = ["quickcheck"], default-features = false }
chrono_0_4 = { package = "chrono", version = "0.4", features = ["arbitrary"], default-features = false }

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
