[package]
name = "const-varint-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
ethereum-types = ["dep:ethereum-types", "const-varint/ethereum-types"]
primitive-types = ["dep:primitive-types", "const-varint/primitive-types"]
ruint = ["dep:ruint", "const-varint/ruint"]
chrono = ["dep:chrono", "const-varint/chrono"]

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
paste = "1"
ethereum-types = { version = "0.15", features = ["arbitrary"], optional = true }
primitive-types = { version = "0.13", features = ["arbitrary"], optional = true }
ruint = { version = "1", features = ["arbitrary"], optional = true }
chrono = { version = "0.4", optional = true, features = ["arbitrary"] }

[dependencies.const-varint]
path = ".."


[[bin]]
name = "varint"
path = "fuzz_targets/varint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "non-zero-varint"
path = "fuzz_targets/non_zero_varint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ethereum-types"
path = "fuzz_targets/ethereum_types.rs"
test = false
doc = false
bench = false
required-features = ["ethereum-types"]

[[bin]]
name = "primitive-types"
path = "fuzz_targets/primitive_types.rs"
test = false
doc = false
bench = false
required-features = ["primitive-types"]

[[bin]]
name = "ruint"
path = "fuzz_targets/ruint.rs"
test = false
doc = false
bench = false
required-features = ["ruint"]

[[bin]]
name = "chrono"
path = "fuzz_targets/chrono.rs"
test = false
doc = false
bench = false
required-features = ["chrono"]
